[package]
name = "blind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.6"
minifb = "0.25"

[dev-dependencies]
png = "0.17"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true